RexNode standardization
Signed-off-by: Heng Qian <qianheng@amazon.com>