@@ -45,6 +45,7 @@ import static org.opensearch.sql.calcite.utils.UserDefinedFunctionUtils.SINGLE_F
 import static org.opensearch.sql.opensearch.storage.script.CompoundedScriptEngine.COMPOUNDED_LANG_NAME;
 
 import com.google.common.collect.BoundType;
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Range;
 import java.math.BigDecimal;
 import java.util.ArrayList;
@@ -57,8 +58,15 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import lombok.Getter;
 import org.apache.calcite.DataContext.Variable;
+import org.apache.calcite.adapter.enumerable.RexImpTable;
+import org.apache.calcite.adapter.enumerable.RexImpTable.NullAs;
+import org.apache.calcite.adapter.enumerable.RexToLixTranslator;
+import org.apache.calcite.adapter.java.JavaTypeFactory;
+import org.apache.calcite.linq4j.tree.ConstantExpression;
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.rel.RelNode;
 import org.apache.calcite.rel.type.RelDataType;
@@ -88,6 +96,7 @@ import org.opensearch.script.Script;
 import org.opensearch.sql.calcite.plan.OpenSearchConstants;
 import org.opensearch.sql.calcite.type.ExprIPType;
 import org.opensearch.sql.calcite.type.ExprSqlType;
+import org.opensearch.sql.calcite.utils.OpenSearchTypeFactory;
 import org.opensearch.sql.calcite.utils.OpenSearchTypeFactory.ExprUDT;
 import org.opensearch.sql.calcite.utils.UserDefinedFunctionUtils;
 import org.opensearch.sql.data.model.ExprIpValue;
@@ -1448,6 +1457,7 @@ public class PredicateAnalyzer {
     private RexNode analyzedNode;
     // use lambda to generate code lazily to avoid store generated code
     private final Supplier<String> codeGenerator;
+    private final List<RexLiteral> literals;
 
     public ScriptQueryExpression(
         RexNode rexNode,
@@ -1463,10 +1473,11 @@ public class PredicateAnalyzer {
       }
       accumulateScriptCount(1);
       RelJsonSerializer serializer = new RelJsonSerializer(cluster);
+      this.literals = new ArrayList<>();
       this.codeGenerator =
           () ->
               SerializationWrapper.wrapWithLangType(
-                  ScriptEngineType.CALCITE, serializer.serialize(rexNode, rowType, fieldTypes));
+                  ScriptEngineType.CALCITE, serializer.serialize(rexNode, rowType, fieldTypes, literals));
     }
 
     @Override
@@ -1485,7 +1496,31 @@ public class PredicateAnalyzer {
           COMPOUNDED_LANG_NAME,
           codeGenerator.get(),
           Collections.emptyMap(),
-          Map.of(Variable.UTC_TIMESTAMP.camelName, currentTime));
+          Map.of(
+              Variable.UTC_TIMESTAMP.camelName, currentTime,
+              // "REX_LITERALS", translatePushedLiterals(this.literals)
+              "REX_LITERALS", this.literals.stream().map(literal ->
+                  ((ConstantExpression) RexToLixTranslator.translateLiteral(literal, literal.getType(),  OpenSearchTypeFactory.TYPE_FACTORY, NullAs.NOT_POSSIBLE)).value).toList()
+          ));
+    }
+
+    private Map<Integer, Object> translatePushedLiterals(
+       List<RexLiteral> literals) {
+      if (literals.isEmpty()) {
+        return ImmutableMap.of();
+      }
+      JavaTypeFactory typeFactory = OpenSearchTypeFactory.TYPE_FACTORY;
+      return IntStream.range(0, literals.size()).boxed()
+          .collect(Collectors.toMap(
+              i -> i,
+              i -> {
+                RexLiteral literal = literals.get(i);
+                ConstantExpression constant = (ConstantExpression) RexToLixTranslator.translateLiteral(literal, literal.getType(), typeFactory, RexImpTable.NullAs.NOT_POSSIBLE);
+                assert constant.value != null;
+                return constant.value;
+              },
+              (existingValue, newValue) -> existingValue
+          ));
     }
 
     @Override
